<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2666AA"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/tb_username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:backgroundTint="#CACACA"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#66FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/tb_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <EditText
        android:id="@+id/tb_password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="368dp"
        android:backgroundTint="#CACACA"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#66FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_login"
        style="@style/ButtonStyle0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Log in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_password" />
</androidx.constraintlayout.widget.ConstraintLayout>