...
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
...

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/connections"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="0"
            tools:layoutManager="GridLayoutManager"
            tools:listitem="@layout/recycler_view_item"
            tools:spanCount="5" />
...
